# influenza_a_serotype

./: .gitignore  Influenza_A_segment_info1.tsv  LICENSE  README.md  influenza_a_serotype.sh  parse_pafs_influenza_A.R  pyproject.toml
environment/: iav_serotype.yaml
parse_iav_genbank/: influenza_a_gbf_to_fna_and_table.py
src/iav_serotype/: __init__.py  assign.py  check_R_libraries1.R  grep_reads.py  iav_funcs.py  iav_serotype.py  minimap2.py  parse_pafs_influenza_A.R
src/iav_serotype/other_scripts/: fastq_process.py  is_tool.py
test_data/: README.md
